beginning to augment code

--- a/2018_team_analysis.Rmd
+++ b/2018_team_analysis.Rmd
@@ -1,17 +1,72 @@
-2018 FRC Match Analysis
-================
-Greg Marra
+---
+title: "2018 FRC Team Analysis"
+author: "Mark Cook"
+output: github_document
+---
 
-A notebook to get FRC Match data from The Blue Alliance API.
+R Code forked and extended from the excellent codebase written and graciously shared by Greg Marra
 
-Distribution Of Match Scores
-============================
+A notebook to support FRC Team analysis from The Blue Alliance API. 
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
+library(skimr)
+
+source("get_tba_data.R")
+events <- getEvents("2018")
+
+# Get Matches
+matches <- events$event_code %>% 
+  map(~ getEventMatches(2018, .x)) %>%
+  bind_rows()
+
+our_team <- "frc3140"
+
+team_red_alliances <- function(matches,team_key) {
+  which(matches$alliances.red.team_keys %>% map_lgl(~ team_key %in% .))
+}
+
+team_blue_alliances <- function(matches,team_key) {
+  which(matches$alliances.blue.team_keys %>% map_lgl(~ team_key %in% .))
+}
+
+team_red_scores <- function(matches,team_key) {
+  matches$alliances.red.score[team_red_alliances(matches,team_key)]
+}
+
+team_blue_scores <- function(matches,team_key) {
+  matches$alliances.blue.score[team_blue_alliances(matches,team_key)]
+}
+
+team_red_opponent_scores <- function(matches,team_key) {
+  matches$alliances.blue.score[team_red_alliances(matches,team_key)]
+}
+
+team_blue_opponent_scores <- function(matches,team_key) {
+  matches$alliances.red.score[team_blue_alliances(matches,team_key)]
+}
+
+team_scores <- function(matches,team_key) {
+  c(team_red_scores(matches,team_key),team_blue_scores(matches,team_key))
+}
+
+team_opponent_scores <- function(matches,team_key) {
+  c(team_red_opponent_scores(matches,team_key),team_blue_opponent_scores(matches,team_key))
+}
+
+
+comp_levels <- c("qm", "qf", "sf", "f")
+```
+
+# Distribution Of Match Scores
 
 The 2018 FRC game is somewhat unique, in that there is a maximum number of ownership points that can exist in a match, and teams need to tip the accumulation of those points towards their alliance. Early scoring is worth much more in that it can accumulate longer, while a box scored in a Switch or Scale during the last second of the match can only be worth a single point.
 
-Here we look at the results from 7106 matches played so far this year.
+Here we look at the results from `r nrow(matches)` matches played so far this year.
 
-``` r
+```{r match_score_distribution}
 matches %>%
   gather(alliances.red.score, alliances.blue.score, key = "alliance", value = "score") %>%
   filter(score >= 0) %>%
@@ -25,9 +80,7 @@ matches %>%
   )
 ```
 
-![](2018_matches_files/figure-markdown_github/match_score_distribution-1.png)
-
-``` r
+```{r win_margins}
 matches %>%
   filter(alliances.red.score >= 0) %>%
   filter(alliances.blue.score >= 0) %>%
@@ -44,14 +97,11 @@ matches %>%
   )
 ```
 
-![](2018_matches_files/figure-markdown_github/win_margins-1.png)
-
-Ownership Deltas
-----------------
+## Ownership Deltas
 
 How big are the swings between ownership?
 
-``` r
+```{r ownership_deltas}
 matches_ownership <- matches %>%
   filter(alliances.red.score >= 0) %>%
   filter(alliances.blue.score >= 0) %>%
@@ -85,11 +135,7 @@ matches_ownership %>%
     shape = "Comp Level"
   ) + 
   scale_colour_manual(values = c(red = "red", blue = "blue"))
-```
 
-![](2018_matches_files/figure-markdown_github/ownership_deltas-1.png)
-
-``` r
 matches_ownership %>%
   gather(switch_ownership_delta, scale_ownership_delta, key = "ownership_object", value = "ownership_delta") %>%
   mutate(ownership_object = factor(ownership_object)) %>%
@@ -107,24 +153,22 @@ matches_ownership %>%
   )
 ```
 
-![](2018_matches_files/figure-markdown_github/ownership_deltas-2.png)
+## Lose the Scale Win the Match
 
-Lose the Scale Win the Match
-----------------------------
-
-``` r
+```{r}
 matches_lose_scale_win_match <- matches_ownership %>%
   filter(((scale_ownership_delta < 0) & (winning_alliance == "red")) |
         ((scale_ownership_delta > 0) & (winning_alliance == "blue")))
 ```
 
-What explains the 11.3284548% of matches where the team loses the Scale but still wins the Match (805 out of 7106 matches)?
+
+What explains the `r nrow(matches_lose_scale_win_match) / nrow(matches) * 100`% of matches where the team loses the Scale but still wins the Match (`r nrow(matches_lose_scale_win_match)` out of `r nrow(matches)` matches)?
 
 We can look at the "scale deficit" a team had to overcome, and see what percentage of the scale deficit was overcome by deltas in other scoring objectives. We can normalize these deltas by the size of the Scale deficit that had to be overcome vs how large these deltas were. For example, if the Red Alliance Endgame scored more 60 points, and the Scale deficit they had to overcome was 45 points, their Endgame overcame 133% of the deficit.
 
 Looking at the summary statistics for matches where Red lost the Scale but won the match, we can see that the median of the percent of the deficit overcome for the Endgame is about 67%, and the median for Switch ownership is about 122%, while the vault points are only 25%. It's hard to perfectly evaluate the vault points, because they also contribute to the powerups. I haven't totally vetted that I'm looking at the score breakdowns correctly here, so I'm not sure if this is all fully capturing everything. However, this suggests that if you're going to lose the Scale, you better win the Switch and nail your Endgame!
 
-``` r
+```{r lose_the_scale_win_the_match}
 ## Thought to explore here:
 ## In matches where the alliance loses the scale but manages to win, what fraction of the score_delta is explained by climb_delta, vault_delta, etc? What mechanic are teams using to lose the scale but win the match?
 
@@ -132,11 +176,7 @@ matches_lose_scale_win_match %>%
   ggplot(aes(scale_ownership_delta, score_delta, color = winning_alliance)) +
   geom_point() +
   scale_colour_manual(values = c(red = "red", blue = "blue"))
-```
 
-![](2018_matches_files/figure-markdown_github/lose_the_scale_win_the_match-1.png)
-
-``` r
 matches_ownership %>%
   filter(((scale_ownership_delta < 0) & (winning_alliance == "red")) |
          ((scale_ownership_delta > 0) & (winning_alliance == "blue"))) %>%
@@ -153,38 +193,3 @@ matches_ownership %>%
   skim()
 ```
 
-    ## Skim summary statistics
-    ##  n obs: 316 
-    ##  n variables: 12 
-    ## 
-    ## Variable type: integer 
-    ##       variable missing complete   n  mean    sd  p0    p25 median   p75
-    ##     auto_delta       0      316 316  6.91 11.76 -42   0         6 15   
-    ##  endgame_delta       0      316 316 22.22 25.03 -60   3.75     25 35   
-    ##     foul_delta       0      316 316  5.44 33.38 -80 -10         0 20   
-    ##    score_delta       0      316 316 68.28 58.11   1  26        52 95.25
-    ##    vault_delta       0      316 316 13.88 15.29 -30   5        15 25   
-    ##  p100     hist
-    ##    40 ▁▁▁▃▇▆▃▁
-    ##    85 ▁▁▁▇▇▂▅▁
-    ##   205 ▁▃▇▂▁▁▁▁
-    ##   319 ▇▅▃▂▁▁▁▁
-    ##    45 ▁▁▃▆▇▇▃▂
-    ## 
-    ## Variable type: numeric 
-    ##                           variable missing complete   n    mean    sd   p0
-    ##              auto_delta_pct_margin       0      316 316   0.042  2.21  -25
-    ##           endgame_delta_pct_margin       0      316 316   1.45   7.04  -50
-    ##              foul_delta_pct_margin       0      316 316   0.71   5.1   -30
-    ##              scale_ownership_delta       0      316 316 -51.41  37    -148
-    ##             switch_ownership_delta       0      316 316  71.47  49.49  -37
-    ##  switch_ownership_delta_pct_margin       0      316 316   4.51  15.8   -37
-    ##             vault_delta_pct_margin       0      316 316   0.62   2.45  -10
-    ##      p25 median    p75 p100     hist
-    ##    0       0.12   0.38    5 ▁▁▁▁▁▁▇▁
-    ##    0.028   0.38   1      75 ▁▁▁▇▁▁▁▁
-    ##   -0.15    0      0.46   55 ▁▁▇▁▁▁▁▁
-    ##  -82.25  -44    -19      -1 ▁▂▃▃▃▅▆▇
-    ##   28      76.5  111     158 ▁▅▆▅▅▇▆▅
-    ##    0.67    1.25   2.62  132 ▁▇▁▁▁▁▁▁
-    ##    0.053   0.27   0.6    25 ▁▁▇▁▁▁▁▁
